# CG_engine

./: .gitignore  .~lock.1_lsystems.pptx#  CMakeLists.txt  README.md  engine.cc
ini/Examens/: Lsys2017.L2D  exam2017.ini  filelist
ini/TrafficSimulation/: simulation2.ini
ini/image_recognition_test/: filelist  image_recognition_test  z_buffered_wireframes036.ini
session_powerpoint/: 4_zbuffered_wireframe.ppt  5_zbuffering.ppt  6_fractals.ppt  7_lighting.ppt  8_shadowing_texture_mapping.pptx  9_spheres_and_cilinders.ppt
src/: clipping.cpp  clipping.h  engine.cc  transformations.cpp  transformations.h
src/color/: color.cpp  color.h
src/generators/: basic2d.cpp  basic2d.h  draw2d.cpp  draw2d.h  draw3d.cpp  draw3d.h  fractals.cpp  fractals.h  lSystems3d.cpp  lSystems3d.h  platonicBodies.cpp  platonicBodies.h  wireframes.cpp  wireframes.h  zBuffering.cpp  zBuffering.h
src/geometry/: shapes.cpp  shapes.h
src/lighting/: light.cpp  light.h
src/vector/: vector3d.cc
vector/: vector3d.h
